--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@ Our bot is programmed to identify crypto gems—hidden treasures with the potent
                <div class="features-grid">
                   <div id="w-node-_1a992bd8-e5e1-faa2-dec2-4a85f3c18503-ef16cb39" class="div-block-9 ftd_1">
                      <img src="/images/wallet.png" loading="lazy" sizes="40px"  alt="" class="tools-icons"/>
-                     <h1 class="h1 small">Wallet Tracking:
+                     <h1 class="h1 small">Wallet Tracking
 </h1>
                      <p class="paragraph small"> Buys/sells from provided wallets, facilitating seamless monitoring of transactions.
 
@@ -1035,7 +1035,7 @@ Our bot is programmed to identify crypto gems—hidden treasures with the potent
                         <ul role="list" class="list">
                         
                            <li>
-                              <h1 class="h1 small small-paragraph"> Unveiling of Website and Social Media Channels for Exns Bot</h1>
+                              <h1 class="h1 small small-paragraph"> Unveiling of Website and Social Media Channels for Ignis AI Bot</h1>
                            </li>
                            <li>
                               <h1 class="h1 small small-paragraph">Admission to Private Ignis AI Bot Telegram chat</h1>
@@ -1044,10 +1044,10 @@ Our bot is programmed to identify crypto gems—hidden treasures with the potent
                               <h1 class="h1 small small-paragraph">Creation and Introduction of $xyz Token</h1>
                            </li>
                             <li>
-                              <h1 class="h1 small small-paragraph">Establishment of the Exns AI Community</h1>
+                              <h1 class="h1 small small-paragraph">Establishment of the Ignis AI Bot Community</h1>
                            </li>
                             <li>
-                              <h1 class="h1 small small-paragraph">Launching Comprehensive Marketing Campaigns for Exns Bot</h1>
+                              <h1 class="h1 small small-paragraph">Launching Comprehensive Marketing Campaigns for Ignis AI Bot</h1>
                            </li>
                             <li>
                               <h1 class="h1 small small-paragraph">Listing on Prominent Platforms</h1>
@@ -1071,19 +1071,19 @@ Our bot is programmed to identify crypto gems—hidden treasures with the potent
  
                         <ul role="list" class="list">
                            <li>
-                              <h1 class="h1 small small-paragraph">Continuous Improvement of Exns Bot, specializing in AI-driven trading signals</h1>
+                              <h1 class="h1 small small-paragraph">Continuous Improvement of Ignis AI Bot, specializing in AI-driven trading signals</h1>
                            </li>
                            <li>
                               <h1 class="h1 small small-paragraph">Active Participation in Community Engagement</h1>
                            </li>
                            <li>
-                              <h1 class="h1 small small-paragraph">Introduction of Exns AI Dapp</h1>
+                              <h1 class="h1 small small-paragraph">Introduction of Ignis AI Bot Dapp</h1>
                            </li>
                             <li>
                               <h1 class="h1 small small-paragraph">Encouraging Community Collaboration</h1>
                            </li>
                             <li>
-                              <h1 class="h1 small small-paragraph">Optimization of Token Gating for Exns Bot</h1>
+                              <h1 class="h1 small small-paragraph">Optimization of Token Gating for Ignis AI Bot</h1>
                            </li>
                             <li>
                               <h1 class="h1 small small-paragraph">Exclusive in app features</h1>
@@ -1104,13 +1104,13 @@ Our bot is programmed to identify crypto gems—hidden treasures with the potent
                               <h1 class="h1 small small-paragraph"> Profit Sharing and V2 Development</h1>
                            </li>
                            <li>
-                              <h1 class="h1 small small-paragraph">Development of V2 Exns AI Bot with advanced signal capabilities</h1>
+                              <h1 class="h1 small small-paragraph">Development of V2 Ignis AI  Bot with advanced signal capabilities</h1>
                            </li>
                            <li>
                               <h1 class="h1 small small-paragraph">Issuance of Press Releases</h1>
                            </li>
                             <li>
-                              <h1 class="h1 small small-paragraph">Pursuing Sponsorships for Exns Bot</h1>
+                              <h1 class="h1 small small-paragraph">Pursuing Sponsorships for Ignis AI Bot</h1>
                            </li>
                             <li>
                               <h1 class="h1 small small-paragraph"> Establishing Major Partnerships in AI-driven trading</h1>
@@ -1131,13 +1131,13 @@ Our bot is programmed to identify crypto gems—hidden treasures with the potent
 
                         <ul role="list" class="list">
                            <li>
-                              <h1 class="h1 small small-paragraph">Introduction of V2 Exns AI Bot with enhanced signal functionalities for 100x, 1000x opportunities</h1>
+                              <h1 class="h1 small small-paragraph">Introduction of V2 Ignis AI  Bot with enhanced signal functionalities for 100x, 1000x opportunities</h1>
                            </li>
                            <li>
                               <h1 class="h1 small small-paragraph">Expansion of Partnerships, specifically those amplifying AI trading capabilities</h1>
                            </li>
                            <li>
-                              <h1 class="h1 small small-paragraph">Essential Team Expansion to further develop AI algorithms for Exns Bots</h1>
+                              <h1 class="h1 small small-paragraph">Essential Team Expansion to further develop AI algorithms for Ignis AI Bot</h1>
                            </li>
                             <li>
                               <h1 class="h1 small small-paragraph"> Rollout of Additional Utilities, including advanced signal-based functionalities for optimized trading opportunities in 100x, 1000x, etc.</h1>
