--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
          <div class="container _2 ban-pad" >
             <div class="godspot-info-container hide">
                <img src="/images/logo.png" loading="lazy" alt="" style="width:200px" class="image-13"/>
-               <h1 class="h1">AI-Driven Signals with Telegram Bot</h1>
+               <h1 class="h1" style="color:#00dbe4">AI-Driven Signals with Telegram Bot</h1>
                <p class="paragraph">Introducing our revolutionary Telegram bot designed to provide users with exclusive crypto signals, unlocking the potential for exponential growth, ranging from 100x to 1000x! What sets us apart is our utilization of cutting-edge AI models for predictive analysis..</p>
                <div class="dual-button-container">
                   <a href="#about-project" class="button w-inline-block">
@@ -220,9 +220,9 @@
             <div class="godspot-info-container grid">
                <div id="w-node-ad3e289c-1e8f-769d-3da2-bcd76bc8be44-ef16cb39" class="div-block-17">
                   <!-- <img src="/images/logo.png" loading="lazy" alt="" style="width:200px"  class="image-13"/> -->
-                  <h1 class="h1 slightly-smaller">AI-Driven Signals with Telegram Bot</h1>
+                  <h1 class="h1 slightly-smaller" style="color:#00dbe4">AI-Driven Signals with Telegram Bot</h1>
                   <p class="paragraph">Introducing our revolutionary Telegram bot designed to provide users with exclusive crypto signals, unlocking the potential for exponential growth, ranging from 100x to 1000x! What sets us apart is our utilization of cutting-edge AI models for predictive analysis..</p>
-                  <div class="dual-button-container">
+                  <div class="dual-button-container" style="margin-top:20px">
                      <a href="/whitepaper" class="button w-inline-block">
                         <div class="button-hover-2 front"></div>
                         <div class="button-text">Whitepaper</div>
