--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
          <div class="container _2 ban-pad" >
             <div class="godspot-info-container hide">
                <img src="/images/logo.png" loading="lazy" alt="" style="width:200px" class="image-13"/>
-               <h1 class="h1" style="color:#00dbe4">AI-Driven Signals with Telegram Bot</h1>
+               <h1 class="h1" style="color:#00dbe4">AI-Driven Signals with Telegram Bot <br> <span style="font-size: 32px;">Auto Trade Bot</span></h1>
                <p class="paragraph">Introducing our revolutionary Telegram bot designed to provide users with exclusive crypto signals, unlocking the potential for exponential growth, ranging from 100x to 1000x! What sets us apart is our utilization of cutting-edge AI models for predictive analysis..</p>
                <div class="dual-button-container">
                   <a href="#about-project" class="button w-inline-block">
@@ -220,7 +220,7 @@
             <div class="godspot-info-container grid">
                <div id="w-node-ad3e289c-1e8f-769d-3da2-bcd76bc8be44-ef16cb39" class="div-block-17">
                   <!-- <img src="/images/logo.png" loading="lazy" alt="" style="width:200px"  class="image-13"/> -->
-                  <h1 class="h1 slightly-smaller" style="color:#00dbe4">AI-Driven Signals with Telegram Bot</h1>
+                  <h1 class="h1 slightly-smaller" style="color:#00dbe4">AI-Driven Signals with Telegram Bot <br> <span style="font-size: 32px;">Auto Trade Bot</span> </h1>
                   <p class="paragraph">Introducing our revolutionary Telegram bot designed to provide users with exclusive crypto signals, unlocking the potential for exponential growth, ranging from 100x to 1000x! What sets us apart is our utilization of cutting-edge AI models for predictive analysis..</p>
                   <div class="dual-button-container" style="margin-top:20px">
                      <a href="/whitepaper" class="button w-inline-block">
@@ -356,7 +356,7 @@
                   <div class="singular-press-logo"><img src="./images/scree.png" loading="lazy" alt="" class="yahoofinance"/><a href="#" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b18015d33e153a1de486_linkbutton.png" loading="lazy" alt="" class="image-60"/></a></div>
                   <div class="singular-press-logo"><img src="./images/xx.png" loading="lazy" alt="" class="image-61"/><a href="chartlink" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b18015d33e153a1de486_linkbutton.png" loading="lazy" alt="" class="image-60"/></a></div>
                   <div class="singular-press-logo"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b9b598dcca3fa61c9688_Group%20444.png" loading="lazy" alt="" class="image-61"/><a href="https://coinmarketcap.com/community/articles/641d57710a1e31489dba596c/" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b18015d33e153a1de486_linkbutton.png" loading="lazy" alt="" class="image-60"/></a></div>
-                  <div class="singular-press-logo"><img src="./images/eth.png" loading="lazy" sizes="(max-width: 479px) 95px, 150px"  alt="" class="image-61"/><a href="https://www.binance.com/en/live/video?roomId=2126707" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b18015d33e153a1de486_linkbutton.png" loading="lazy" alt="" class="image-60"/></a></div>
+                  <div class="singular-press-logo"><img src="./images/eth.png" loading="lazy" sizes="(max-width: 479px) 95px, 150px"  alt="" class="image-61"/><a href="#" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b18015d33e153a1de486_linkbutton.png" loading="lazy" alt="" class="image-60"/></a></div>
                   <div class="singular-press-logo"><img src="./images/xx.png" loading="lazy" sizes="(max-width: 479px) 95px, 150px" alt="" class="image-61"/><a href="#" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b18015d33e153a1de486_linkbutton.png" loading="lazy" alt="" class="image-60"/></a></div>
                   <div class="singular-press-logo"><img src="./images/swa.png" loading="lazy" alt="" class="image-61"/><a href="#" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b18015d33e153a1de486_linkbutton.png" loading="lazy" alt="" class="image-60"/></a></div>
                   <div class="singular-press-logo"><img src="./images/swa.png" loading="lazy" sizes="100vw"  alt="" class="image-61"/><a href="#" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434b18015d33e153a1de486_linkbutton.png" loading="lazy" alt="" class="image-60"/></a></div>
@@ -406,7 +406,7 @@
                   </div>
                   <div class="individual-partner-block-for-popup">
                      <div class="partner-block-name"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434baa97d80d95e5a982ca3_Group%20388.png" loading="lazy" sizes="100vw" srcset="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434baa97d80d95e5a982ca3_Group%20388-p-500.png 500w, https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434baa97d80d95e5a982ca3_Group%20388-p-800.png 800w, https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434baa97d80d95e5a982ca3_Group%20388.png 1430w" alt="" class="image-57"/></div>
-                     <div class="partner-block-link"><a href="https://www.binance.com/en/live/video?roomId=2126707" target="_blank" class="whitepaper-website-link partnership-popup-view-partner-link">view &gt;</a></div>
+                     <div class="partner-block-link"><a href="#" target="_blank" class="whitepaper-website-link partnership-popup-view-partner-link">view &gt;</a></div>
                   </div>
                   <div class="individual-partner-block-for-popup">
                      <div class="partner-block-name"><img src="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434c07bcea6fe816ba6d838_Group%20452.png" loading="lazy" sizes="100vw" srcset="https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434c07bcea6fe816ba6d838_Group%20452-p-500.png 500w, https://uploads-ssl.webflow.com/62cdb9722a8b9878682caf64/6434c07bcea6fe816ba6d838_Group%20452.png 961w" alt="" class="image-57"/></div>
